name: "orec"
version:"1.0"
opam-version: "1.2"
maintainer: "octa@polychoron.fr"
authors: "octa@polychoron.fr"
dev-repo: "git+https://github.com/Octachron/orec"
homepage: "https://github.com/Octachron/orec"
bug-reports: "https://github.com/Octachron/orec/issues"

build:[
 ["jbuilder" "build" "-p" name "-j" jobs]
]

build-doc:[
  [ "jbuilder" "build" "-p" name "-j" jobs "@doc" ]
]

depends: [
  "jbuilder" {build}]
